--- a/index.html
+++ b/index.html
@@ -10,6 +10,432 @@
       data-expires="2018-11-26"
       content="Aob+++752GiUzm1RNSIkM9TINnQDxTlxz02v8hFJK/uGO2hmXnJqH8c/ZpI05b2nLsHDhGO3Ce2zXJUFQmO7jA4AAAB1eyJvcmlnaW4iOiJodHRwczovL25ldGZsaXguY29tOjQ0MyIsImZlYXR1cmUiOiJFbmNyeXB0ZWRNZWRpYUhkY3BQb2xpY3lDaGVjayIsImV4cGlyeSI6MTU0MzI0MzQyNCwiaXNTdWJkb21haW4iOnRydWV9"
     />
-    Mlink rel="icon" type="image/x-icon" href="favicon.ico"
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <title>Netflix&nbsp;Watch TV Shows Online</title>
+    <link
+      rel="preload"
+      href="https://codex.nflxext.com/%5E3.0.0/truthBundle/webui/1.22.5-shakti-js-v1a4b30c5/js/js/bootstrap.js,common%7Cbootstrap.js/2/4O034l4b4n4F4B06474v4N080p004P4q4K4i4x4o4J4d4w4z4f4e4I0a024L21/bck/true/none"
+      as="script"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="img/nficon2016.ico"
+      sizes="16x16"
+    />
+    <meta
+      content="watching movie, moive online, internet moive, watching tv, tv online, online tv shows, internet tv,&nbsp;streaming, movie streaming, streaming tv, recommend movie, &nbsp;movie, canada, no download, full HD video"
+      name="keywords"
+    />
+    <meta
+      content="Watch Netflix movies & TV shows online or stream right to your smart TV, game ..."
+      name="description"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0"
+    />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta
+      name="apple-touch-icon"
+      content="https://assets.nflxext.com/en_us/layout/ecweb/netflix-app-icon_152.jpg"
+    />
+    <meta
+      property="og:description"
+      content="Watch Netflix movies & TV shows online or stream right to your smart TV, game ..."
+    />
+    <meta
+      property="al:ios:url"
+      content="nflx://www.netflix.com/?locale=ko-KR"
+    />
+    <meta property="al:ios:app_store_id" content="363590051" />
+    <meta property="al:ios:app_name" content="Netflix" />
+    <meta
+      property="al:android:url"
+      content="nflx://www.netflix.com/?locale=ko-KR"
+    />
+    <meta property="al:android:package" content="com.netflix.mediaclient" />
+    <meta property="al:android:app_name" content="Netflix" />
+    <meta name="twitter:card" content="player" />
+    <meta name="twitter:site" content="@netflix" />
+
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
+    <link rel="stylesheet" href="css/common.css" />
+    <script defer src="js/index.js"></script>
   </head>
+
+  <body>
+    <header></header>
+
+    <main>
+      <!-- Hero -->
+      <section id="hero">
+        <div class="hero_wrap">
+          <nav class="nav_wrap">
+            <div class="nav">
+              <figure id="logo" onclick="window.location.reload()">
+                <svg
+                  version="1.1"
+                  class="main_logo"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  x="0px"
+                  y="0px"
+                  viewBox="0 0 920.4 276.7"
+                  style="enable-background: new 0 0 920.4 276.7"
+                  xml:space="preserve"
+                >
+                  <style type="text/css">
+                    .st0 {
+                      fill: #e50914;
+                    }
+                  </style>
+                  <path
+                    class="st0"
+                    id="netflix-logo"
+                    d="M0,236.6c4.7-0.2,10.2-1,14.9-1.6c15.6-2,25.2-12.6,24.7-28.9c0.1-68.4,0.1-136.8,0.2-205.2
+	c14.4,0,28.8,0,43.2,0c-0.1,65.9-0.2,131.8-0.3,197.7c0.2,40.3-21.9,68.9-61.9,74.8c-7.8,1.2-13.7,2.1-20.7,2.4
+	C0,262.8,0,249.7,0,236.6z M124.9,0.9c14.4,0,28.8,0,43.2,0c-0.2,84.5-0.4,168.9-0.5,253.4c-14.4,1.5-28.8,3-43.2,4.6
+	C124.6,172.9,124.8,86.9,124.9,0.9z M251.3,68.8c-0.3,0-0.5,0-0.8,0c-0.1,59.5-0.2,119-0.4,178.4c-13,0.9-26,1.9-38.9,3
+	c0.2-83.1,0.4-166.3,0.5-249.4c18.1,0,36.1,0,54.2,0c14.3,48.5,28.8,96.9,43.4,145.3c0.3,0,0.5,0,0.8,0c0.1-48.4,0.2-96.8,0.2-145.3
+	c12.8,0,25.7,0,38.5,0c-0.1,80.3-0.2,160.7-0.3,241c-14.8,0.6-29.7,1.3-44.5,2C286.2,185.6,268.6,127.2,251.3,68.8z M435.6,107.1
+	c18.6-0.1,37.2,0,55.9,0c0,11.4,0,22.8,0,34.1c-18.6-0.1-37.3-0.1-55.9,0c0,32.9,0,65.8,0,98.7c-14.4,0.1-28.9,0.4-43.3,0.7
+	c0.1-79.9,0.1-159.8,0.2-239.7c38.1,0,76.2,0,114.3,0c0,11.4,0,22.8,0,34.2c-23.7,0-47.4-0.1-71.1,0C435.6,59,435.6,83,435.6,107.1z
+	 M540.1,0.9c14.4,0,28.8,0,43.2,0c0.1,69,0.2,138,0.3,207c23.8,0.9,47.5,2,71.2,3.3c0,11.7,0,23.4,0.1,35
+	c-38.2-2.4-76.3-4.2-114.6-5.3C540.3,160.9,540.2,80.9,540.1,0.9z M685.9,0.9c14.4,0,28.8,0,43.2,0c0.2,83.7,0.4,167.5,0.5,251.2
+	c-14.4-1.3-28.8-2.5-43.2-3.6C686.2,165.9,686,83.4,685.9,0.9z M917.2,0.9c-14.8,43.5-29.8,86.8-45.1,130.1
+	c16.5,48.2,32.5,96.5,48.2,144.9c-15.1-2.4-30.2-4.6-45.3-6.8c-11.5-36.4-23.1-72.7-35-109c-0.3,0-0.5,0-0.8-0.1
+	c-11.6,33.3-23.3,66.6-35.1,99.9c-13.5-1.6-26.9-3.1-40.4-4.5c16.2-42.7,32.2-85.4,48-128.3c-14.9-42.2-30-84.3-45.4-126.3
+	c14.9,0,29.9,0,44.8,0c10.9,32.4,21.7,64.8,32.3,97.3c0.3,0,0.5,0,0.8,0c11.1-32.4,22-64.8,32.9-97.3C890.5,0.9,903.9,0.9,917.2,0.9
+	z"
+                  />
+                </svg>
+              </figure>
+              <button
+                class="bt_login"
+                onclick="location.href='login/login.html'"
+              >
+                Sign In
+              </button>
+            </div>
+          </nav>
+          <div class="hero_title_wrap">
+            <h3 class="alert">
+              This web is not an official Netflix Homepage. This is a Netflix
+              clone web for practice.
+            </h3>
+            <h2 class="hero_title">Unlimited movies, TV shows, and more.</h2>
+            <h3 class="hero_subtitle">Watch anywhere. Cancel anytime.</h3>
+            <div class="hero_join_wrap">
+              <p class="hero_join_title">
+                Ready to watch? Enter your email to create or restart your
+                membership.
+              </p>
+              <form action="" method="POST" class="email_form">
+                <label id="input_id" placeholder="email">
+                  <label class="placelabel" for="email_id">Email address</label>
+                  <input
+                    title="email"
+                    name="email"
+                    id="email_id"
+                    type="email"
+                    class="input_email"
+                    maxlength="50"
+                    minlength="5"
+                  />
+                  <p class="id_alert">Email is required.</p>
+                  <p class="wrong_alert">Please enter a valid email address</p>
+                </label>
+                <button class="bt_join" type="button">
+                  GET STARTED&nbsp;&nbsp;<span>⟩</span>
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Feature -->
+      <section id="feature">
+        <div class="feature_wrap">
+          <ul class="tv feature_ul">
+            <li class="feature_text_wrap">
+              <h2 class="feature_title">Enjoy on your TV.</h2>
+              <h3 class="feature_subtitle">
+                Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV,
+                Blu-ray players, and more.
+              </h3>
+            </li>
+            <li class="feature_content_wrap">
+              <div class="feature_content">
+                <img src="img/tv.png" alt="" class="tv_img" />
+                <div class="feature_video">
+                  <video
+                    src="img/video-tv-0819.m4v"
+                    autoplay
+                    muted
+                    loop
+                    class="tv_video"
+                  ></video>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="feature_wrap">
+          <ul class="offline feature_ul">
+            <li class="feature_content_wrap">
+              <div class="feature_content_offline">
+                <img src="img/mobile-0819.jpg" alt="" class="offline_img_1" />
+                <div class="feature_video_offline">
+                  <div class="offline_story">
+                    <img src="img/boxshot.png" alt="" />
+                  </div>
+                  <div class="offline_story_text">
+                    <div>Stranger Things</div>
+                    <div>Downloading...</div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="feature_text_wrap">
+              <h2 class="feature_title">
+                Download your shows to watch offline.
+              </h2>
+              <h3 class="feature_subtitle">
+                Save your favorites easily and always have something to watch.
+              </h3>
+            </li>
+          </ul>
+        </div>
+
+        <div class="feature_wrap">
+          <ul class="feature_ul">
+            <li class="feature_text_wrap">
+              <h2 class="feature_title">Watch everywhere.</h2>
+              <h3 class="feature_subtitle">
+                Stream unlimited movies and TV shows on your phone, tablet,
+                laptop, and TV without paying more.
+              </h3>
+            </li>
+            <li class="feature_content_wrap">
+              <div class="feature_content_device">
+                <img src="img/device-pile.png" alt="" class="device_img" />
+                <div class="feature_video_device">
+                  <video
+                    src="img/video-devices.m4v"
+                    autoplay
+                    muted
+                    loop
+                    class="device_video"
+                  ></video>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- faq -->
+      <section id="faq">
+        <div class="faq_wrap">
+          <h2 class="faq_title">Frequently Asked Questions</h2>
+          <div class="faq_list_wrap">
+            <div class="faq_list">
+              <h3 class="faq_list_title">
+                What is Netflix?
+                <span class="openstate_icon">+</span>
+              </h3>
+              <div class="faq_list_answer">
+                <p>
+                  Netflix is a streaming service that offers a wide variety of
+                  award-winning TV shows, movies, anime, documentaries, and more
+                  on thousands of internet-connected devices.
+                  <br /><br />
+                  You can watch as much as you want, whenever you want without a
+                  single commercial – all for one low monthly price. There's
+                  always something new to discover and new TV shows and movies
+                  are added every week!
+                </p>
+              </div>
+            </div>
+            <div class="faq_list">
+              <h3 class="faq_list_title">
+                How much does Netflix cost?
+                <span class="openstate_icon">+</span>
+              </h3>
+              <div class="faq_list_answer">
+                <p>
+                  Watch Netflix on your smartphone, tablet, Smart TV, laptop, or
+                  streaming device, all for one fixed monthly fee. Plans range
+                  from KRW9,500 to KRW14,500 a month. No extra costs, no
+                  contracts.
+                </p>
+              </div>
+            </div>
+            <div class="faq_list">
+              <h3 class="faq_list_title">
+                Where can I watch?
+                <span class="openstate_icon">+</span>
+              </h3>
+              <div class="faq_list_answer">
+                <p>
+                  Watch anywhere, anytime, on an unlimited number of devices.
+                  Sign in with your Netflix account to watch instantly on the
+                  web at netflix.com from your personal computer or on any
+                  internet-connected device that offers the Netflix app,
+                  including smart TVs, smartphones, tablets, streaming media
+                  players and game consoles.
+                  <br /><br />
+                  You can also download your favorite shows with the iOS,
+                  Android, or Windows 10 app. Use downloads to watch while
+                  you're on the go and without an internet connection. Take
+                  Netflix with you anywhere.
+                </p>
+              </div>
+            </div>
+            <div class="faq_list">
+              <h3 class="faq_list_title">
+                How do I cancel?
+                <span class="openstate_icon">+</span>
+              </h3>
+              <div class="faq_list_answer">
+                <p>
+                  Netflix is flexible. There are no pesky contracts and no
+                  commitments. You can easily cancel your account online in two
+                  clicks. There are no cancellation fees – start or stop your
+                  account anytime.
+                </p>
+              </div>
+            </div>
+            <div class="faq_list">
+              <h3 class="faq_list_title">
+                What can I watch on Netflix?
+                <span class="openstate_icon">+</span>
+              </h3>
+              <div class="faq_list_answer">
+                <p>
+                  Netflix has an extensive library of feature films,
+                  documentaries, TV shows, anime, award-winning Netflix
+                  originals, and more. Watch as much as you want, anytime you
+                  want.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="hero_faq_wrap">
+          <p>
+            Ready to watch? Enter your email to create or restart your
+            membership.
+          </p>
+          <form action="#" method="POST" class="faq_email_form">
+            <label id="faq_input_id" placeholder="email">
+              <label class="faq_placelabel" for="faq_email_id"
+                >Email address</label
+              >
+              <input
+                title="email"
+                name="email"
+                id="faq_email_id"
+                type="email"
+                class="faq_input_email"
+                maxlength="50"
+                minlength="5"
+              />
+              <p class="faq_id_alert">Email is required.</p>
+              <p class="faq_wrong_alert">Please enter a valid email address</p>
+            </label>
+            <button class="faq_bt_join" type="button">
+              GET STARTED&nbsp;&nbsp;<span>⟩</span>
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="footer_wrap">
+        <div class="footer_menu">
+          <ul>
+            <li>
+              <a href="#">FAQ</a>
+            </li>
+            <li>
+              <a href="#">Investor Relations</a>
+            </li>
+            <li>
+              <a href="#">Privacy</a>
+            </li>
+            <li>
+              <a href="#">Speed Test</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="#">Help Center</a>
+            </li>
+            <li>
+              <a href="#">Jobs</a>
+            </li>
+            <li>
+              <a href="#">Cookie Preferences</a>
+            </li>
+            <li>
+              <a href="#">Legal Notices</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="#">Account</a>
+            </li>
+            <li>
+              <a href="#">Ways to Watch</a>
+            </li>
+            <li>
+              <a href="#">Corporate Information</a>
+            </li>
+            <li>
+              <a href="#">Netflix Originals</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="#">Media Center</a>
+            </li>
+            <li>
+              <a href="#">Terms of Use</a>
+            </li>
+            <li>
+              <a href="#">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer_address_wrap">
+          <p class="contact">Questions? Call 00-308-321-0161</p>
+
+          <p class="company_info">
+            <span> Copyright © 2020 Netflix Inc. </span>
+            <span> Link to KFTC website </span>
+            <span> Cloud Hosting: Amazon Web Services Inc. </span>
+            <span> KOREAN | ENGLISH </span>
+          </p>
+
+          <p class="site_info">
+            Netflix Services Korea Ltd. | E-Commerce Registration Number: Je
+            2018-Seoul Jong-ro-0426 Ho. | Representative: Reginald Shawn
+            Thompson | Address: 20F, Tower A, Centropolis Building 26,
+            Ujeongguk-ro, Jongno-gu, Seoul, 03161 Republic of Korea | Phone:
+            00-308-321-0161
+          </p>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
