--- a/index.html
+++ b/index.html
@@ -427,6 +427,12 @@
             <span> KOREAN | ENGLISH </span>
           </p>
 
+          <p class="site_info">
+            Netflix Services Korea Ltd. | E-Commerce Registration Number: Je
+            2018-Seoul Jong-ro-0426 Ho. | Representative: Reginald Shawn
+            Thompson | Address: 20F, Tower A, Centropolis Building 26,
+            Ujeongguk-ro, Jongno-gu, Seoul, 03161 Republic of Korea | Phone:
+            00-308-321-0161
           </p>
         </div>
       </div>
