--- a/index.html
+++ b/index.html
@@ -260,7 +260,10 @@
                   You can watch as much as you want, whenever you want without a
                   single commercial – all for one low monthly price. There's
                   always something new to discover and new TV shows and movies
-                  are added every week!
+                  are added every week! You can watch as much as you want,
+                  whenever you want without a single commercial – all for one
+                  low monthly price. There's always something new to discover
+                  and new TV shows and movies are added every week!
                 </p>
               </div>
             </div>
