--- a/index.html
+++ b/index.html
@@ -257,6 +257,10 @@
                   award-winning TV shows, movies, anime, documentaries, and more
                   on thousands of internet-connected devices.
                   <br /><br />
+                  You can watch as much as you want, whenever you want without a
+                  single commercial – all for one low monthly price. There's
+                  always something new to discover and new TV shows and movies
+                  are added every week!
                 </p>
               </div>
             </div>
