--- a/index.html
+++ b/index.html
@@ -290,7 +290,12 @@
                   web at netflix.com from your personal computer or on any
                   internet-connected device that offers the Netflix app,
                   including smart TVs, smartphones, tablets, streaming media
-                  players and game consoles.
+                  players and game consoles. Watch anywhere, anytime, on an
+                  unlimited number of devices. Sign in with your Netflix account
+                  to watch instantly on the web at netflix.com from your
+                  personal computer or on any internet-connected device that
+                  offers the Netflix app, including smart TVs, smartphones,
+                  tablets, streaming media players and game consoles.
                   <br /><br />
                   You can also download your favorite shows with the iOS,
                   Android, or Windows 10 app. Use downloads to watch while
