--- a/login/login.html
+++ b/login/login.html
@@ -205,6 +205,25 @@
                 <li>
                   <a href="#">Privacy</a>
                 </li>
+
+                <li>
+                  <a href="#">FAQ</a>
+                </li>
+                <li>
+                  <a href="#">Cookie Preferences</a>
+                </li>
+                <li>
+                  <a href="#">Help Center</a>
+                </li>
+                <li>
+                  <a href="#">Corporate Information</a>
+                </li>
+                <li>
+                  <a href="#">Terms of Use</a>
+                </li>
+                <li>
+                  <a href="#">Privacy</a>
+                </li>
               </ul>
             </div>
 
